@@ -1,3 +1,8 @@
+2008-03-13  Marek Habersack  <mhabersack@novell.com>
+
+	* ApplicationHost.cs: use HttpRuntime.CaseInsensitive when
+	checking whether we're running in a case-insensitive environment.
+
 2008-02-18  Marek Habersack  <mhabersack@novell.com>
 
 	* VirtualPathProvider.cs: chain up to the previous provider, if
